# loto_prediction

./: data.py  loto.ipynb  pyproject.toml
