[tool.poetry]
name = "loto_prediction"
version = "0.1.0"
description = ""
authors = ["alexiscampan <alexis.campan@ut-capitole.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
sklearn = "^0.0"
numpy = "^1.22.0"
beautifulsoup4 = "^4.10.0"
keras = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
